syntax = "proto3";
package h2x.assets;

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "h2x/assets/asset.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/h2x/v4-chain/protocol/x/assets/types";

// Msg defines the Msg service.
service Msg {
  // CreateAsset creates a new asset.
  rpc CreateAsset(MsgCreateAsset) returns (MsgCreateAssetResponse);
  // UpdateAsset updates an existing asset.
  rpc UpdateAsset(MsgUpdateAsset) returns (MsgUpdateAssetResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

// MsgCreateAsset is a message used by x/gov for creating a new asset through
// governance.
message MsgCreateAsset {
  option (cosmos.msg.v1.signer) = "authority";

  // The address that controls the module (governance module only).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // `asset` defines parameters for the new asset.
  Asset asset = 2 [ (gogoproto.nullable) = false ];
}

// MsgCreateAssetResponse defines the CreateAsset response type.
message MsgCreateAssetResponse {}

// MsgUpdateAsset is a message used by x/gov for updating an existing asset
// through governance.
message MsgUpdateAsset {
  option (cosmos.msg.v1.signer) = "authority";

  // The address that controls the module (governance module only).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // `asset` defines the updated asset parameters. All fields must be set.
  Asset asset = 2 [ (gogoproto.nullable) = false ];
}

// MsgUpdateAssetResponse defines the UpdateAsset response type.
message MsgUpdateAssetResponse {}

// this line is used by starport scaffolding # proto/tx/message
